--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -1270,8 +1270,11 @@ The image in which light rays from one point on the object actually cross at the
 \end{column}
 \begin{column}{7cm}
 \begin{itemize}
-\item
-\item 
+\item Get a Thor CCD camera from the Optical Tweezer kit
+\item Select lens tube, adjustable lens tube, and lens
+\item Assemble and mount on table. 
+\item Connect to ThorCam software
+\item Using adjustable lens tube, focus on various objects
 \end{itemize}
 \end{column}
 \end{columns}
